brain/sources/prod-metadata/objects/Interview__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Auto-filled from Job 
Requirement.</description>
    <inlineHelpText>Auto-filled from Job 
Requirement.</inlineHelpText>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>B2B_Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>