brain/sources/prod-metadata/objects/Interview__c/fields/Advanced_to_Next_Round__c.field-meta.xml
<CustomField>
    <fullName>Advanced_to_Next_Round__c</fullName>
    <label>Advanced to Next Round?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>