brain/sources/prod-metadata/objects/Interview__c/fields/Affinity_A__c.field-meta.xml
<CustomField>
    <fullName>Affinity_A__c</fullName>
    <label>Affinity A</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>