brain/sources/prod-metadata/objects/Interview__c/fields/AI_Assignment_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Assignment_Confidence__c</fullName>
    <label>AI Assignment Confidence</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>