brain/sources/prod-metadata/objects/Interview__c/fields/AI_Assignment_Reason__c.field-meta.xml
<CustomField>
    <fullName>AI_Assignment_Reason__c</fullName>
    <label>AI Assignment Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>