brain/sources/prod-metadata/objects/Interview__c/fields/AI_Assignment_Version__c.field-meta.xml
<CustomField>
    <fullName>AI_Assignment_Version__c</fullName>
    <label>AI Assignment Version</label>
    <length>200</length>
    <type>Text</type>
</CustomField>