brain/sources/prod-metadata/objects/Interview__c/fields/AI_Suggestion_JSON__c.field-meta.xml
<CustomField>
    <fullName>AI_Suggestion_JSON__c</fullName>
    <label>AI Suggestion JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>