brain/sources/prod-metadata/objects/Interview__c/fields/AI_Suggestion_Status__c.field-meta.xml
<CustomField>
    <fullName>AI_Suggestion_Status__c</fullName>
    <label>AI Suggestion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Requested</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Error.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>