brain/sources/prod-metadata/objects/Interview__c/fields/AI_Suggestions_Expiry__c.field-meta.xml
<CustomField>
    <fullName>AI_Suggestions_Expiry__c</fullName>
    <label>AI Suggestions Expiry</label>
    <type>DateTime</type>
</CustomField>