brain/sources/prod-metadata/objects/Interview__c/fields/AI_Suggestions_Generated_On__c.field-meta.xml
<CustomField>
    <fullName>AI_Suggestions_Generated_On__c</fullName>
    <label>AI Suggestions Generated On</label>
    <type>DateTime</type>
</CustomField>