brain/sources/prod-metadata/objects/Interview__c/fields/Alpha_Used__c.field-meta.xml
<CustomField>
    <fullName>Alpha_Used__c</fullName>
    <label>Alpha Used</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>