brain/sources/prod-metadata/objects/Interview__c/fields/Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Email__c</fullName>
    <description>Universal email field for interview applicant. Auto-populated from Job Submission for both internal candidates and website applicants. Used in interview notifications.</description>
    <inlineHelpText>Auto-populated from JS.Applicant_Email__c by Flow 4 (Create Interview). Used in email templates for interview confirmations and reminders.</inlineHelpText>
    <label>Applicant Email</label>
    <type>Email</type>
</CustomField>