brain/sources/prod-metadata/objects/Interview__c/fields/Assigned_By__c.field-meta.xml
<CustomField>
    <fullName>Assigned_By__c</fullName>
    <label>Assigned By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AI Nightly</fullName>
            </value>
            <value>
                <fullName>AI Suggestion</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Extended Reassign</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>