brain/sources/prod-metadata/objects/Interview__c/fields/Assignment_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Error_Message__c</fullName>
    <label>Assignment Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>