brain/sources/prod-metadata/objects/Interview__c/fields/Assignment_Priority__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Priority__c</fullName>
    <label>Assignment Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>