brain/sources/prod-metadata/objects/Interview__c/fields/Assignment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Reason__c</fullName>
    <label>Assignment Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>