brain/sources/prod-metadata/objects/Interview__c/fields/Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Status__c</fullName>
    <label>Assignment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Assigned</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>No Bandwidth</fullName>
            </value>
            <value>
                <fullName>Needs Manual Review</fullName>
            </value>
            <value>
                <fullName>Assignment Failed</fullName>
            </value>
            <value>
                <fullName>Reassigned Due To Extension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>