brain/sources/prod-metadata/objects/Interview__c/fields/Base_Credit__c.field-meta.xml
<CustomField>
    <fullName>Base_Credit__c</fullName>
    <formula>IF(
  ISBLANK(Scheduled_Minutes__c),
  NULL,
  IF(
    Scheduled_Minutes__c &lt;= 30,
    0.5,
    IF(
      Scheduled_Minutes__c &lt;= 60,
      1,
      MIN(
        3,
        1 + (CEILING((Scheduled_Minutes__c - 60) / 30) * 0.5)
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Credit</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>