brain/sources/prod-metadata/objects/Interview__c/fields/Base_Magnitude_B__c.field-meta.xml
<CustomField>
    <fullName>Base_Magnitude_B__c</fullName>
    <label>Base Magnitude B</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>