brain/sources/prod-metadata/objects/Interview__c/fields/Calendar_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Event_Id__c</fullName>
    <label>Calendar Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>