brain/sources/prod-metadata/objects/Interview__c/fields/Calendar_Status__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Status__c</fullName>
    <label>Calendar Status</label>
    <length>225</length>
    <type>Text</type>
</CustomField>