brain/sources/prod-metadata/objects/Interview__c/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zoom video call</fullName>
            </value>
            <value>
                <fullName>Google meet video call</fullName>
            </value>
            <value>
                <fullName>Microsoft Teams Video Call</fullName>
            </value>
            <value>
                <fullName>Normal phone call</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>