brain/sources/prod-metadata/objects/Interview__c/fields/Candidate_Name_For__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name_For__c</fullName>
    <formula>Candidate__r.FirstName + &quot; &quot; +  Candidate__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Name</label>
    <type>Text</type>
</CustomField>