brain/sources/prod-metadata/objects/Interview__c/fields/Candidate_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Phone_Number__c</fullName>
    <formula>Candidate__r.Phone</formula>
    <label>Candidate Phone Number</label>
    <type>Text</type>
</CustomField>