brain/sources/prod-metadata/objects/Interview__c/fields/Candidate_Rate__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Rate__c</fullName>
    <description>Snapshot of the Candidate Rate at the time of interview creation. Preserved even if rates change later. Used for historical margin reporting.</description>
    <inlineHelpText>Auto-populated from Job Submission Candidate Rate when interview is created. Snapshot preserved for historical reporting accuracy.</inlineHelpText>
    <label>Candidate Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>