brain/sources/prod-metadata/objects/Interview__c/fields/Candidate_Status__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Status__c</fullName>
    <formula>text(Candidate__r.Candidate_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Status</label>
    <type>Text</type>
</CustomField>