brain/sources/prod-metadata/objects/Interview__c/fields/Cap_Hit__c.field-meta.xml
<CustomField>
    <fullName>Cap_Hit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cap Hit</label>
    <type>Checkbox</type>
</CustomField>