brain/sources/prod-metadata/objects/Interview__c/fields/Cap_Limit__c.field-meta.xml
<CustomField>
    <fullName>Cap_Limit__c</fullName>
    <label>Cap Limit</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>