brain/sources/prod-metadata/objects/Interview__c/fields/Channel_Thread_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Channel_Thread_Timestamp__c</fullName>
    <label>Channel Thread Timestamp</label>
    <length>50</length>
    <type>Text</type>
</CustomField>