brain/sources/prod-metadata/objects/Interview__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this interview to the client company. Auto-filled from Job Requirement Client Account when created via Create Interview flow.</description>
    <inlineHelpText>Auto-populated from Job Requirement when using Create Interview flow. Shows which client company is interviewing this candidate.</inlineHelpText>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Interviews (Client Account)</relationshipLabel>
    <relationshipName>B2B_Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>