brain/sources/prod-metadata/objects/Interview__c/fields/Client_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Client_Feedback__c</fullName>
    <label>Client Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>