brain/sources/prod-metadata/objects/Interview__c/fields/Client_Feedback_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Feedback_Status__c</fullName>
    <label>Client Feedback Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>