brain/sources/prod-metadata/objects/Interview__c/fields/Client_Lead__c.field-meta.xml
<CustomField>
    <fullName>Client_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Interviews (Client Lead)</relationshipLabel>
    <relationshipName>B2B_Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>