brain/sources/prod-metadata/objects/Interview__c/fields/Coherence_Factor_Fc__c.field-meta.xml
<CustomField>
    <fullName>Coherence_Factor_Fc__c</fullName>
    <label>Coherence Factor Fc</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>