brain/sources/prod-metadata/objects/Interview__c/fields/Coherence_Phi__c.field-meta.xml
<CustomField>
    <fullName>Coherence_Phi__c</fullName>
    <label>Coherence Phi</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>