brain/sources/prod-metadata/objects/Interview__c/fields/Combined_F__c.field-meta.xml
<CustomField>
    <fullName>Combined_F__c</fullName>
    <label>Combined F</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>