brain/sources/prod-metadata/objects/Interview__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company(Do Not Use)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>