brain/sources/prod-metadata/objects/Interview__c/fields/company_new__c.field-meta.xml
<CustomField>
    <fullName>company_new__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Company master record. Replaces free-text company name entry.</description>
    <label>Company</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>