brain/sources/prod-metadata/objects/Interview__c/fields/Credit_Scale_C__c.field-meta.xml
<CustomField>
    <fullName>Credit_Scale_C__c</fullName>
    <label>Credit Scale C</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>