brain/sources/prod-metadata/objects/Interview__c/fields/Current_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Current_Record_Link__c</fullName>
    <formula>HYPERLINK(
    &quot;/AICPORTAL/s/interview/&quot; &amp; Id,
    Name,
    &quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Record Link</label>
    <type>Text</type>
</CustomField>