brain/sources/prod-metadata/objects/Interview__c/fields/Curvature_Kappa__c.field-meta.xml
<CustomField>
    <fullName>Curvature_Kappa__c</fullName>
    <label>Curvature Kappa</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>