brain/sources/prod-metadata/objects/Interview__c/fields/Cutoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Cutoff_Date__c</fullName>
    <formula>Date_of_Interview__c + 14</formula>
    <label>Cutoff Date</label>
    <type>Date</type>
</CustomField>