brain/sources/prod-metadata/objects/Interview__c/fields/Delta_Combined__c.field-meta.xml
<CustomField>
    <fullName>Delta_Combined__c</fullName>
    <label>Delta Combined</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>