brain/sources/prod-metadata/objects/Interview__c/fields/Delta_Patterned__c.field-meta.xml
<CustomField>
    <fullName>Delta_Patterned__c</fullName>
    <label>Delta Patterned</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>