brain/sources/prod-metadata/objects/Interview__c/fields/Delta_Post_MFRM__c.field-meta.xml
<CustomField>
    <fullName>Delta_Post_MFRM__c</fullName>
    <label>Delta Post MFRM</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>