brain/sources/prod-metadata/objects/Interview__c/fields/Depth_Weight_W__c.field-meta.xml
<CustomField>
    <fullName>Depth_Weight_W__c</fullName>
    <label>Depth Weight W</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>