brain/sources/prod-metadata/objects/Interview__c/fields/Duration_Signal_D_rel__c.field-meta.xml
<CustomField>
    <fullName>Duration_Signal_D_rel__c</fullName>
    <label>Duration Signal D rel</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>