brain/sources/prod-metadata/objects/Interview__c/fields/Duration_Weight_D_abs__c.field-meta.xml
<CustomField>
    <fullName>Duration_Weight_D_abs__c</fullName>
    <label>Duration Weight D abs</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>