brain/sources/prod-metadata/objects/Interview__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C2C</fullName>
            </value>
            <value>
                <fullName>W2 Contract</fullName>
            </value>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Contract-to-Hire</fullName>
            </value>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Full-Time</fullName>
                <isActive>false</isActive>
                <label>Full-Time</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>