brain/sources/prod-metadata/objects/Interview__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time(Do Not Use)</label>
    <type>Time</type>
</CustomField>