brain/sources/prod-metadata/objects/Interview__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <label>End Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Times</valueSetName>
    </valueSet>
</CustomField>