brain/sources/prod-metadata/objects/Interview__c/fields/Experience_Mu__c.field-meta.xml
<CustomField>
    <fullName>Experience_Mu__c</fullName>
    <label>Experience Mu</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>