brain/sources/prod-metadata/objects/Interview__c/fields/Final_Notification_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Final_Notification_Date_Time__c</fullName>
    <label>Final Notification Date/Time</label>
    <type>DateTime</type>
</CustomField>