brain/sources/prod-metadata/objects/Interview__c/fields/Follow_Up_Active__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow-Up Active</label>
    <type>Checkbox</type>
</CustomField>