brain/sources/prod-metadata/objects/Interview__c/fields/Follow_Up_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Follow-Up Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interviews1</relationshipName>
    <type>Lookup</type>
</CustomField>