brain/sources/prod-metadata/objects/Interview__c/fields/Follow_Up_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Completed_Date__c</fullName>
    <label>Follow-Up Completed Date</label>
    <type>DateTime</type>
</CustomField>