brain/sources/prod-metadata/objects/Interview__c/fields/Follow_Up_Completion_Reason__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Completion_Reason__c</fullName>
    <label>Follow-Up Completion Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feedback Received</fullName>
            </value>
            <value>
                <fullName>Final Outcome Updated</fullName>
            </value>
            <value>
                <fullName>No Response After Three Reminders</fullName>
            </value>
            <value>
                <fullName>Candidate Withdrew</fullName>
            </value>
            <value>
                <fullName>Position Closed</fullName>
            </value>
            <value>
                <fullName>Interview Cancelled</fullName>
            </value>
            <value>
                <fullName>Company Requested No Further Follow-Up</fullName>
            </value>
            <value>
                <fullName>Follow-Up Not Required</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>