brain/sources/prod-metadata/objects/Interview__c/fields/Follow_Up_Method__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Method__c</fullName>
    <label>Follow-Up Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Messaging Platform</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>