brain/sources/prod-metadata/objects/Interview__c/fields/G_Factor__c.field-meta.xml
<CustomField>
    <fullName>G_Factor__c</fullName>
    <label>G Factor</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>