brain/sources/prod-metadata/objects/Interview__c/fields/Gamma_R__c.field-meta.xml
<CustomField>
    <fullName>Gamma_R__c</fullName>
    <label>Gamma R</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>