brain/sources/prod-metadata/objects/Interview__c/fields/Google_Calendar_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Calendar_Id__c</fullName>
    <label>Google Calendar Id</label>
    <length>225</length>
    <type>Text</type>
</CustomField>