brain/sources/prod-metadata/objects/Interview__c/fields/Google_Docs_ID__c.field-meta.xml
<CustomField>
    <fullName>Google_Docs_ID__c</fullName>
    <label>Google Docs ID</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>