brain/sources/prod-metadata/objects/Interview__c/fields/Google_Docs_URL__c.field-meta.xml
<CustomField>
    <fullName>Google_Docs_URL__c</fullName>
    <label>Google Docs URL</label>
    <type>Url</type>
</CustomField>