brain/sources/prod-metadata/objects/Interview__c/fields/Google_Event_Url__c.field-meta.xml
<CustomField>
    <fullName>Google_Event_Url__c</fullName>
    <label>Google Event Url</label>
    <type>TextArea</type>
</CustomField>