brain/sources/prod-metadata/objects/Interview__c/fields/If_yes_why__c.field-meta.xml
<CustomField>
    <fullName>If_yes_why__c</fullName>
    <label>If yes why?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>