brain/sources/prod-metadata/objects/Interview__c/fields/Importance_Score_I__c.field-meta.xml
<CustomField>
    <fullName>Importance_Score_I__c</fullName>
    <label>Importance Score I</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>