brain/sources/prod-metadata/objects/Interview__c/fields/Incentive_Amount__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Amount__c</fullName>
    <label>Incentive Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>