brain/sources/prod-metadata/objects/Interview__c/fields/Incentive_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Amount_Formula__c</fullName>
    <formula>Weighted_Credit__c  *  Incentive_Rate_Applied_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incentive Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>