brain/sources/prod-metadata/objects/Interview__c/fields/Incentive_Calculated_On__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Calculated_On__c</fullName>
    <label>Incentive Calculated On</label>
    <type>DateTime</type>
</CustomField>