brain/sources/prod-metadata/objects/Interview__c/fields/Incentive_eligiblle__c.field-meta.xml
<CustomField>
    <fullName>Incentive_eligiblle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incentive eligiblle?</label>
    <type>Checkbox</type>
</CustomField>