brain/sources/prod-metadata/objects/Interview__c/fields/Incentive_Rate_Applied__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Rate_Applied__c</fullName>
    <label>Incentive Rate Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>