brain/sources/prod-metadata/objects/Interview__c/fields/Incentive_Rate_Applied_Formula__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Rate_Applied_Formula__c</fullName>
    <formula>CASE( Incentive_Type_Formula__c ,
  &quot;Positive&quot;, 400,
  &quot;Negative&quot;, -100,
  0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incentive Rate Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>