brain/sources/prod-metadata/objects/Interview__c/fields/Incentive_Type__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Type__c</fullName>
    <label>Incentive Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>