brain/sources/prod-metadata/objects/Interview__c/fields/Incentive_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Type_Formula__c</fullName>
    <formula>CASE(TEXT( Interview_Outcome__c ),
  &quot;Moved to Next Round&quot;, &quot;Positive&quot;,
  &quot;Offer Received&quot;, &quot;Positive&quot;,
  &quot;Rejected&quot;, &quot;Negative&quot;,
  &quot;Ghosted&quot;, &quot;Negative&quot;,
  &quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incentive Type</label>
    <type>Text</type>
</CustomField>