brain/sources/prod-metadata/objects/Interview__c/fields/Innovation_Epsilon__c.field-meta.xml
<CustomField>
    <fullName>Innovation_Epsilon__c</fullName>
    <label>Innovation Epsilon</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>