brain/sources/prod-metadata/objects/Interview__c/fields/Innovation_Window_N__c.field-meta.xml
<CustomField>
    <fullName>Innovation_Window_N__c</fullName>
    <label>Innovation Window N</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>