brain/sources/prod-metadata/objects/Interview__c/fields/Interview_After_Application_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_After_Application_Start_Date__c</fullName>
    <formula>AND(
  NOT(ISBLANK(Date_of_Interview__c)),
  NOT(ISBLANK(Candidate__c)),
  Date_of_Interview__c &gt;= Candidate__r.Application_Start_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interview After Application Start Date</label>
    <type>Checkbox</type>
</CustomField>